--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.fancy-underline {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .fancy-underline::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px; /* Adjust this value to control the distance between text and underline */
+    width: 100%;
+    height: 2px; /* Adjust this value to control the thickness of the underline */
+    background-color: #656262; /* Adjust this value to set the color of the underline */
+    transition: transform 0.3s ease; /* Optional: Add transition effect */
+    transform-origin: center right;
+  }
+  
+  .fancy-underline:hover::after {
+    transform: scaleX(0); /* Hide the underline on hover */
+  }
+  
